objects/Data_Extract__c.object
<CustomObject>
    <description>This object will be used for scheduling data extract via Report or SOQL</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Batch_Job_Id__c</fullName>
        <label>Batch Job Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dataset_Name__c</fullName>
        <label>Dataset Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Day_Date_Selector__c</fullName>
        <label>Day/Date Selector</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Schedule__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>MON</fullName>
                </value>
                <value>
                    <fullName>TUE</fullName>
                </value>
                <value>
                    <fullName>WED</fullName>
                </value>
                <value>
                    <fullName>THU</fullName>
                </value>
                <value>
                    <fullName>FRI</fullName>
                </value>
                <value>
                    <fullName>SAT</fullName>
                </value>
                <value>
                    <fullName>SUN</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Metadata__c</fullName>
        <label>Metadata</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Operation__c</fullName>
        <label>Operation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Append</fullName>
                </value>
                <value>
                    <fullName>Overwrite</fullName>
                </value>
                <value>
                    <fullName>Upsert</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Report_Id__c</fullName>
        <label>Report Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_Name__c</fullName>
        <label>Report Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SOQL_Query__c</fullName>
        <label>SOQL Query</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Schedule__c</fullName>
        <label>Schedule</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Time_Interval__c</fullName>
        <label>Time Interval</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>12:00 AM</fullName>
                </value>
                <value>
                    <fullName>1:00 AM</fullName>
                </value>
                <value>
                    <fullName>2:00 AM</fullName>
                </value>
                <value>
                    <fullName>3:00 AM</fullName>
                </value>
                <value>
                    <fullName>4:00 AM</fullName>
                </value>
                <value>
                    <fullName>5:00 AM</fullName>
                </value>
                <value>
                    <fullName>6:00 AM</fullName>
                </value>
                <value>
                    <fullName>7:00 AM</fullName>
                </value>
                <value>
                    <fullName>8:00 AM</fullName>
                </value>
                <value>
                    <fullName>9:00 AM</fullName>
                </value>
                <value>
                    <fullName>10:00 AM</fullName>
                </value>
                <value>
                    <fullName>11:00 AM</fullName>
                </value>
                <value>
                    <fullName>12:00 PM</fullName>
                </value>
                <value>
                    <fullName>1:00 PM</fullName>
                </value>
                <value>
                    <fullName>2:00 PM</fullName>
                </value>
                <value>
                    <fullName>3:00 PM</fullName>
                </value>
                <value>
                    <fullName>4:00 PM</fullName>
                </value>
                <value>
                    <fullName>5:00 PM</fullName>
                </value>
                <value>
                    <fullName>6:00 PM</fullName>
                </value>
                <value>
                    <fullName>7:00 PM</fullName>
                </value>
                <value>
                    <fullName>8:00 PM</fullName>
                </value>
                <value>
                    <fullName>9:00 PM</fullName>
                </value>
                <value>
                    <fullName>10:00 PM</fullName>
                </value>
                <value>
                    <fullName>11:00 PM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Timestamp_String__c</fullName>
        <formula>TEXT(YEAR( DATEVALUE(Timestamp__c) )) &amp; &apos;~~~&apos; &amp;   IF(LEN(TEXT(MONTH(DATEVALUE(Timestamp__c)))) == 2, TEXT(MONTH(DATEVALUE(Timestamp__c))), &apos;0&apos; &amp; TEXT(MONTH(DATEVALUE(Timestamp__c))))  &amp; &apos;~~~&apos; &amp;  IF(LEN(TEXT(DAY(DATEVALUE(Timestamp__c)))) == 2, TEXT(DAY(DATEVALUE(Timestamp__c))), &apos;0&apos; &amp; TEXT(DAY(DATEVALUE(Timestamp__c))))</formula>
        <label>Timestamp String</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Timestamp__c</fullName>
        <label>Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SOQL</fullName>
                </value>
                <value>
                    <fullName>Report</fullName>
                </value>
                <value>
                    <fullName>oData</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>oData_Object__c</fullName>
        <label>oData Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>oData_Object_href__c</fullName>
        <label>oData Object href</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>oData_URL__c</fullName>
        <description>oData URL</description>
        <inlineHelpText>oData URL</inlineHelpText>
        <label>oData URL</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>Data Extract</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Dataset_Name__c</columns>
        <columns>SOQL_Query__c</columns>
        <columns>Report_Name__c</columns>
        <columns>oData_Object__c</columns>
        <columns>oData_URL__c</columns>
        <columns>Schedule__c</columns>
        <columns>Active__c</columns>
        <columns>Timestamp__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Report</fullName>
        <columns>NAME</columns>
        <columns>Dataset_Name__c</columns>
        <columns>Report_Name__c</columns>
        <columns>Schedule__c</columns>
        <columns>Active__c</columns>
        <columns>Timestamp__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Report</value>
        </filters>
        <label>Report</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>SOQL</fullName>
        <columns>NAME</columns>
        <columns>Dataset_Name__c</columns>
        <columns>SOQL_Query__c</columns>
        <columns>Schedule__c</columns>
        <columns>Active__c</columns>
        <columns>Timestamp__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>SOQL</value>
        </filters>
        <label>SOQL</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>oData</fullName>
        <columns>NAME</columns>
        <columns>Dataset_Name__c</columns>
        <columns>Schedule__c</columns>
        <columns>oData_Object__c</columns>
        <columns>oData_URL__c</columns>
        <columns>Active__c</columns>
        <columns>Timestamp__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>oData</value>
        </filters>
        <label>oData</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Extract Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Data Extracts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>